--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ New in 0.8 - ????
 
 * Added /unspent/ADDR|ADDR|... similar to blockchain.info/unspent?address=...
 
-* Allow configuration to import unconfirmed transactions via RPC to bitcoind.
+* Allow configuration to import unconfirmed transactions via RPC to dagrad.
 
 * Crude SVG hash rate chart via nethash?format=svg.
 
@@ -137,7 +137,7 @@ Major changes from 0.3 to 0.4 (2011-07-04 to 2011-07-15)
 * FastCGI support has matured.  See README-FASTCGI.txt for setup.
 
 * Abe supports Weeds currency natively.  Weeds info:
-  http://forum.bitcoin.org/index.php?topic=24209.0
+  http://forum.dagra.org/index.php?topic=24209.0
 
 * The "datadir" configuration directive can add a new currency without
   changes to Python code.
@@ -145,7 +145,7 @@ Major changes from 0.3 to 0.4 (2011-07-04 to 2011-07-15)
 * "auto-agpl" provides a link to download the source directory: a
   license compliance aid for those not wishing to use a Github fork.
 
-* /chain/Bitcoin/q/getblockcount: first of (I hope) many
+* /chain/Dagra/q/getblockcount: first of (I hope) many
   BBE-compatible APIs.
 
 * Several small fixes and speedups.
