--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@
         store.cursor.execute(cached, params)
     IntegrityError: duplicate key value violates unique constraint "tx_tx_hash_key"
 
-    Failed to catch up {'blkfile_number': 1, 'dirname': '/home/bitcoin/.bitcoin', 'c
+    Failed to catch up {'blkfile_number': 1, 'dirname': '/home/dagra/.dagra', 'c
     hain_id': None, 'id': Decimal('1'), 'blkfile_offset': 434255480}
     Traceback (most recent call last):
       File "Abe/DataStore.py", line 2220, in catch_up
@@ -43,32 +43,32 @@
 * Support new script types.  Fix the firstbits table on upgrade.
   Recent non-zero outputs showing as Unknown:
   tx_hash=b728387a3cf1dfcff1eef13706816327907f79f9366a7098ee48fc0c00ad2726,
-  Bitcoin 140921, 64:f816...d335 CHECKSIG.
+  Dagra 140921, 64:f816...d335 CHECKSIG.
   tx_hash=9740e7d646f5278603c04706a366716e5e87212c57395e0d24761c0ae784b2c6,
-  Bitcoin 141460, 76:4c55...652e CHECKSIG.  Various in Bitcoin 150951:
+  Dagra 141460, 76:4c55...652e CHECKSIG.  Various in Dagra 150951:
   DUP HASH160 0: EQUALVERIFY CHECKSIG.
   tx_hash=9969603dca74d14d29d1d5f56b94c7872551607f8c2d6837ab9715c60721b50e,
-  Bitcoin 154012, 8:04678afd04678afd DROP SHA256 32:894e...e95c EQUAL,
+  Dagra 154012, 8:04678afd04678afd DROP SHA256 32:894e...e95c EQUAL,
   redeemed with 7:04678afd0467.
   tx_hash=b8fd633e7713a43d5ac87266adc78444669b987a56b3a65fb92d58c2c4b0e84d,
-  Bitcoin 163685, raw 142a9bc5447d664c1d0141392a842d23dba45c4f13b175.
+  Dagra 163685, raw 142a9bc5447d664c1d0141392a842d23dba45c4f13b175.
   tx_hash=60a20bd93aa49ab4b28d514ec10b06e1829ce6818ec06cd3aabd013ebcdc4bb1,
-  Bitcoin 164467, 1 65:04cc...8ac4 65:0461...42af 2 CHECKMULTISIG,
+  Dagra 164467, 1 65:04cc...8ac4 65:0461...42af 2 CHECKMULTISIG,
   multisig script, redeemed with 0: 71:3044...2b01.
   tx_hash=f003f0c1193019db2497a675fd05d9f2edddf9b67c59e677c48d3dbd4ed5f00b,
-  Bitcoin 165116, raw
+  Dagra 165116, raw
   76a91407e761706c63b36e5a328fab1d94e9397f40704d88b0.
   tx_hash=fa735229f650a8a12bcf2f14cca5a8593513f0aabc52f8687ee148c9f9ab6665,
-  Bitcoin 166533, IFDUP IF 2SWAP VERIFY 2OVER DEPTH.
+  Dagra 166533, IFDUP IF 2SWAP VERIFY 2OVER DEPTH.
   tx_hash=b38bb421d9a54c58ea331c4b4823dd498f1e42e25ac96d3db643308fcc70503e,
-  Bitcoin 168910, DUP DUP DUP.
+  Dagra 168910, DUP DUP DUP.
   tx_hash=9c08a4d78931342b37fd5f72900fb9983087e6f46c4a097d8a1f52c74e28eaf6,
-  Bitcoin 170052, HASH160 20:19a7...960e EQUAL, pay-to-script-hash,
+  Dagra 170052, HASH160 20:19a7...960e EQUAL, pay-to-script-hash,
   redeemed with 37:5121...51ae.
   tx_hash=c0b69d1e5ed13732dbd704604f7c08bc96549cc556c464aa42cc7525b3897987,
-  Bitcoin 170766, 3 DROP DROP 1, redeemed with 1.
+  Dagra 170766, 3 DROP DROP 1, redeemed with 1.
   tx_hash=aea682d68a3ea5e3583e088dcbd699a5d44d4b083f02ad0aaf2598fe1fa4dfd4,
-  Bitcoin 170877, MIN 3 EQUAL, redeemed with 1:03 1:03.
+  Dagra 170877, MIN 3 EQUAL, redeemed with 1:03 1:03.
   Cf. http://blockchain.info/strange-transactions
 
 * Highlight any objects that are not in a main chain as such.  In
@@ -93,7 +93,7 @@
 
 * Defunct abe.fcgi processes not letting abe.py exit.  Unseen in a while.
 
-* Bitcoin 140176 failed to catch up: str(exception) == "1".  Should
+* Dagra 140176 failed to catch up: str(exception) == "1".  Should
   probably limit the kinds of exceptions that catch_up converts to
   warnings.
 
@@ -105,7 +105,7 @@
 
 * Show auxiliary proof-of-work data.
 
-* Consider porting to libbitcoin.
+* Consider porting to libdagra.
 
 * Use explicit constraint names.
 
@@ -129,7 +129,7 @@
 
 * Admin interface to delete chains, etc.
 
-* Add a tool to upload transactions if bitcoind supports it.
+* Add a tool to upload transactions if dagrad supports it.
 
 * Perhaps write a validation module to check db data.  Begun as verify.py.
 
@@ -177,7 +177,7 @@
   addresses, then add a hyperlink from objects linked to them.
 
 * Perhaps track and report coin difficulty as proposed by casascius:
-  http://forum.bitcoin.org/index.php?topic=10755.0
+  http://forum.dagra.org/index.php?topic=10755.0
 
 * Perhaps track and report collectible transaction bytes: size of
   transactions whose outputs are all spent, minus Merkle shrubbery
