--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ New in 0.8 - ????
 
 * Added /unspent/ADDR|ADDR|... similar to blockchain.info/unspent?address=...
 
-* Allow configuration to import unconfirmed transactions via RPC to dagrad.
+* Allow configuration to import unconfirmed transactions via RPC to dowind.
 
 * Crude SVG hash rate chart via nethash?format=svg.
 
@@ -137,7 +137,7 @@ Major changes from 0.3 to 0.4 (2011-07-04 to 2011-07-15)
 * FastCGI support has matured.  See README-FASTCGI.txt for setup.
 
 * Abe supports Weeds currency natively.  Weeds info:
-  http://forum.dagra.org/index.php?topic=24209.0
+  http://forum.dowin.org/index.php?topic=24209.0
 
 * The "datadir" configuration directive can add a new currency without
   changes to Python code.
