--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@
         store.cursor.execute(cached, params)
     IntegrityError: duplicate key value violates unique constraint "tx_tx_hash_key"
 
-    Failed to catch up {'blkfile_number': 1, 'dirname': '/home/dagra/.dagra', 'c
+    Failed to catch up {'blkfile_number': 1, 'dirname': '/home/dowin/.dowin', 'c
     hain_id': None, 'id': Decimal('1'), 'blkfile_offset': 434255480}
     Traceback (most recent call last):
       File "Abe/DataStore.py", line 2220, in catch_up
@@ -105,7 +105,7 @@
 
 * Show auxiliary proof-of-work data.
 
-* Consider porting to libdagra.
+* Consider porting to libdowin.
 
 * Use explicit constraint names.
 
@@ -129,7 +129,7 @@
 
 * Admin interface to delete chains, etc.
 
-* Add a tool to upload transactions if dagrad supports it.
+* Add a tool to upload transactions if dowind supports it.
 
 * Perhaps write a validation module to check db data.  Begun as verify.py.
 
@@ -177,7 +177,7 @@
   addresses, then add a hyperlink from objects linked to them.
 
 * Perhaps track and report coin difficulty as proposed by casascius:
-  http://forum.dagra.org/index.php?topic=10755.0
+  http://forum.dowin.org/index.php?topic=10755.0
 
 * Perhaps track and report collectible transaction bytes: size of
   transactions whose outputs are all spent, minus Merkle shrubbery
